# dcrest

./: .hgignore  LICENSE  README.md  flake.nix  pyproject.toml  shell.nix  tests.py
cassettes/: TestDOIs.test_query_simple.yaml
dcrest/: __init__.py  client.py
dcrest/endpoints/: __init__.py  dois.py  providers.py
tests/: test_all.py
tests/cassettes/: TestDOIs.test_query_simple.yaml  TestProviders.test_get.yaml  TestProviders.test_query_simple.yaml  TestProviders.test_totals_simple.yaml
