[tool.poetry]
name = "dcrest"
version = "0.1.2"
description = "Python client library for the DataCite REST API"
authors = ["Jez Cope <jez.cope@bl.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
furl = "^2.1.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^7.28.0"
vcrpy = "^4.1.1"
pytest-vcr = "^1.0.2"
isort = "^5.9.3"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
