[tool.poetry]
name = "dcrest"
version = "0.1.3"
description = "Asynchronous Python client library for the DataCite REST API"
authors = ["Jez Cope <jez.cope@bl.uk>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
munch = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^7.28.0"
vcrpy = "^4.1.1"
pytest-vcr = "^1.0.2"
isort = "^5.9.3"
flake8 = "^4.0.1"
bump2version = "^1.0.1"
pytest-asyncio = "^0.15.1"
cchardet = "^2.1.7"
aiodns = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
